--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-decorators": "^0.20.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0"
   }
