--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-decorators": "^0.20.0",
     "html-webpack-plugin": "^3.2.0",
     "javascript-state-machine": "^3.1.0",
+    "jquery": "^3.3.1",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
